Creación de la ultima vista, y creación de DTOs.